Add FileSource FPS property, fix pipeline cleanup, and UI improvements
- Add FPS property to FileSource with automatic mode (1fps images, native video)
- Fix pipeline/webcam cleanup on New/Open to prevent lingering threads
- Add unsaved changes check before loading new diagrams
- Suppress harmless JavaFX module warning on startup
- Rename Monitor to Monitor/Passthrough
- Add Save/Cancel buttons to main editor matching container editor
- Fix tooltip behavior for checkbox and help icons
- Add container pipeline file path support with browse dialog
- Clear preview image on New/Open
- Various TODO.txt updates